--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.benji.benstimer"
-        minSdkVersion 23
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -34,6 +34,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 
     implementation 'com.google.android.material:material:1.1.0-alpha09'
+
+    implementation "com.github.tomeees:scrollpicker:1.7.3"
+
 
     implementation "com.github.StephenVinouze:MaterialNumberPicker:1.0.6"
 
